--- a/requirements.txt
+++ b/requirements.txt
@@ -38,11 +38,11 @@ qrcode==5.3
 reportlab==4.0.4
 requests==2.20.0
 suds-jurko==0.6
-vatnumber==1.2
 vobject==0.9.3
 Werkzeug==0.11.15 ; sys_platform != 'win32'
 Werkzeug==0.16.0  ; sys_platform == 'win32'
 XlsxWriter==0.9.3
+python-stdnum==1.8
 xlwt==1.3.*
 xlrd==1.0.0
 pypiwin32 ; sys_platform == 'win32'
