--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ html2text==2016.9.19
 Jinja2==2.10.1
 libsass==0.22.0
 lxml==3.7.1 ; sys_platform != 'win32' and python_version < '3.7'
-lxml==4.2.3 ; sys_platform != 'win32' and python_version >= '3.7'
-lxml ; sys_platform == 'win32'
+lxml==4.2.3 ; sys_platform != 'win32' and python_version == '3.7'
+lxml==5.1.1 ; sys_platform == 'win32' or python_version >= '3.8'
 Mako==1.0.4
 MarkupSafe==0.23
 mock==2.0.0
@@ -36,7 +36,7 @@ pytz==2022.7.1
 pyusb==1.0.0
 qrcode==5.3
 reportlab==4.0.4
-requests==2.20.0
+requests==2.31.0
 suds-jurko==0.6
 vobject==0.9.3
 Werkzeug==0.11.15 ; sys_platform != 'win32'
