--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ decorator==4.0.10
 docutils==0.12
 ebaysdk==2.1.5
 gevent==1.1.2 ; sys_platform != 'win32' and python_version < '3.7'
-gevent==1.5.0 ; python_version >= '3.7'
+gevent==1.5.0 ; python_version >= '3.7' and python_version < '3.9'
+gevent==25.5.1 ; python_version >= '3.9'
 greenlet==0.4.10 ; python_version < '3.7'
-greenlet==0.4.14 ; python_version >= '3.7'
+greenlet==3.2.3 ; python_version >= '3.7'
 html2text==2016.9.19
 Jinja2==2.10.1
 libsass==0.22.0
