--- a/.cnb.yml
+++ b/.cnb.yml
@@ -1,4 +1,4 @@
-main:
+py3.10:
   push:
     - services:
         - docker
@@ -6,6 +6,6 @@ main:
         - name: clone odoo12
           script: git clone --depth=1 -b 12.0 https://cnb.cool/hzboiler/odoo12.git odoo
         - name: docker build
-          script: docker build --build-arg DEB_SOURCE=https://mirrors.tencentyun.com --build-arg PG_SOURCE=https://mirrors.tencentyun.com --build-arg PYPI_SOURCE=https://mirrors.tencentyun.com/pypi/simple -t ${CNB_DOCKER_REGISTRY}/${CNB_REPO_SLUG_LOWERCASE}/odoo12:latest .
+          script: docker build --build-arg DEB_SOURCE=https://mirrors.tencentyun.com --build-arg PG_SOURCE=https://mirrors.tencentyun.com --build-arg PYPI_SOURCE=https://mirrors.tencentyun.com/pypi/simple -t ${CNB_DOCKER_REGISTRY}/${CNB_REPO_SLUG_LOWERCASE}/odoo12:py3.10 .
         - name: docker push
-          script: docker push ${CNB_DOCKER_REGISTRY}/${CNB_REPO_SLUG_LOWERCASE}/odoo12:latest
+          script: docker push ${CNB_DOCKER_REGISTRY}/${CNB_REPO_SLUG_LOWERCASE}/odoo12:py3.10
